# ProviderDeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md
.github/workflows/: release.yml
apps/providerdeck-launcher/: Cargo.toml  build.rs
apps/providerdeck-launcher/src/: main.rs
apps/providerdeck-manager/: index.html  package-lock.json  package.json
apps/providerdeck-manager/src/: app.test.mjs  app.tsx  product-copy.test.mjs
apps/providerdeck-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/providerdeck-manager/src-tauri/capabilities/: default.json
apps/providerdeck-manager/src-tauri/icons/: icon.icns
apps/providerdeck-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/providerdeck-manager/src-tauri/tests/: windows_subsystem.rs
assets/: routing-example.toml
assets/inject/: renderer-inject.js  renderer-inject.test.mjs
crates/providerdeck-core/: Cargo.toml
crates/providerdeck-core/src/: app_paths.rs  assets.rs  bridge.rs  cdp.rs  codex_config.rs  image_compressor.rs  launcher.rs  legacy_import.rs  lib.rs  local_auth.rs  paths.rs  ports.rs  protocol_proxy.rs  provider_catalog.rs  proxy.rs  routes.rs  settings.rs  status.rs  switch_journal.rs  thread_history.rs  update.rs  watcher.rs
crates/providerdeck-core/tests/: bridge_routes.rs  cdp_bridge.rs  codex_config.rs  installers.rs  launcher.rs  (+9 more)
docs/: coexistence.md  compatibility.md  model-switching.md  provider-configuration.md  recovery.md
scripts/: generate-icons.sh  generate-latest-json.sh  verify-app-server-schema.sh
(+16 files in other folders)
