[package]
name = "providerdeck-manager"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "providerdeck_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "providerdeck-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
async-trait = "0.1"
providerdeck-core = { path = "../../../crates/providerdeck-core" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol", "tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-dialog = "2"
reqwest.workspace = true
toml.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
